force-app/main/default/objects/Account/fields/sunsun2__c.field-meta.xml
<CustomField>
    <fullName>sunsun2__c</fullName>
    <label>sunsun2</label>
    <length>220</length>
    <type>Text</type>
</CustomField>