force-app/main/default/objects/Account/fields/SunSun__c.field-meta.xml
<CustomField>
    <fullName>SunSun__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SunSun</label>
    <type>Checkbox</type>
</CustomField>