force-app/main/default/objects/Account/fields/TextCheck2__c.field-meta.xml
<CustomField>
    <fullName>TextCheck2__c</fullName>
    <label>TextCheck2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>